fastapi_app/TODO
make that redis will store information about pending battles, and deleting them after some time of inactivity



fix this output:

File "//script.py", line 2
    using namespace std;
          ^^^^^^^^^
SyntaxError: invalid syntax
  File "//script.py", line 2
    using namespace std;
          ^^^^^^^^^
SyntaxError: invalid syntax
  File "//script.py", line 2
    using namespace std;
          ^^^^^^^^^
SyntaxError: invalid syntax
  File "//script.py", line 2
    using namespace std;
          ^^^^^^^^^ .......................


for production rewrite functionality of storing active battles (right now it's stored as a local dict in battle_engine.py)
